# Trivia-Kata

./: CMakeLists.txt  Makefile  README.md  Trivia.qbs  Trivia.sln  Trivia.vcxproj  TriviaApp.vcxproj  TriviaTests.vcxproj  TriviaTextTests.cc  TriviaUnitTests.cc
App/: App.pro
UnitTests/: UnitTests.pro
